# sigmod2014-pc-top-solutions

./: README.md
AWFY/: .gitignore  CMakeLists.txt  Makefile  ORIGINAL_README  README.md  alloc.cpp  indexes.cpp  main.cpp  query1.cpp  query1.hpp  query2.cpp  query2.hpp  query3.cpp  query3.hpp  query4.cpp  query4.hpp  schedulegraph.cpp  scheduler.cpp  tester.cpp  types.hpp
AWFY/include/: MurmurHash2.cpp  MurmurHash2.h  MurmurHash3.cpp  MurmurHash3.h  StringRef.hpp  alloc.hpp  compatibility.hpp  env.hpp  executioncommons.hpp  hash.hpp  index.hpp  indexers.hpp  indexes.hpp  io.hpp  macros.hpp  metrics.hpp  queryfiles.hpp  queue.hpp  runtime.hpp  schedulegraph.hpp  subgraph.hpp  tokenize.hpp  topklist.hpp
AWFY/include/campers/: hashtable.hpp  pool.hpp
AWFY/include/concurrent/: atomic.hpp  mutex.hpp  scheduler.hpp  thread.hpp
AWFY/include/util/: chrono.hpp  counters.hpp  log.hpp  measurement.hpp  memoryhooks.hpp
AWFY/submission/: README  SUBMISSION_GUIDELINES  run.sh
AWFY/test_queries/: additional-100k-answers.txt  additional-100k-queries.txt  additional-1k-answers.txt  additional-1k-queries.txt
AWFY/util/: chrono.cpp  counters.cpp  io.cpp  measurement.cpp  memoryhooks.cpp
blxlrsmb/: .gitignore  CMakeLists.txt  README.md
blxlrsmb/src/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  SumEstimator.cpp  globals.cpp  globals.h  job_wrapper.h  main.cpp  measurement.cpp  measurement.h  query2_Unionfind.cc  query3_version4.cc  query3_version5.cc  query4_v3.cc  query4_wyx.cc  read.cpp
blxlrsmb/src/lib/: ThreadPool.hh  allocator.hh  bitset.h  common.h  finish_time_continuation.h
